--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.application.name=nicer
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/nicelink
 spring.datasource.username=linker
-spring.datasource.password=djcn3o109(#$dj1
+#!!!change after deploing
+spring.datasource.password=pass
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.docker.compose.enabled=false
@@ -13,4 +14,4 @@ spring.thymeleaf.suffix=.html
 
 
 #router temporary address
-server.address=192.168.0.94
+#server.address=192.168.0.94
