--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,5 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 
-#router temporary address
-#server.address=192.168.0.94
+#router temporary address 192.168.0.94
+server.address=0.0.0.0
