--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=nicer
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/nicelink
+#spring.datasource.url=jdbc:postgresql://localhost:5432/nicelink
+spring.datasource.url=jdbc:postgresql://nicelink_db:5432/nicelink
 spring.datasource.username=linker
 #!!!change after deploing
 spring.datasource.password=pass
