--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.application.name=nicer
 
 #spring.datasource.url=jdbc:postgresql://localhost:5432/nicelink
 spring.datasource.url=jdbc:postgresql://nicelink_db:5432/nicelink
-spring.datasource.username=linker
+#linker
+spring.datasource.username=postgres
 #!!!change after deploing
 spring.datasource.password=pass
 spring.datasource.driver-class-name=org.postgresql.Driver
