--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=nicer
 
-#spring.datasource.url=jdbc:postgresql://localhost:5432/nicelink
+#spring.datasource.url=   jdbc:postgresql://localhost:5432/nicelink  || jdbc:postgresql://nicelink_db:5432/nicelink
 spring.datasource.url=jdbc:postgresql://nicelink_db:5432/nicelink
-#linker
+#linker  || postgres
 spring.datasource.username=postgres
-#!!!change after deploing
+#!!!change after deploing  djcn3o109(#$dj1  || pass
 spring.datasource.password=pass
 spring.datasource.driver-class-name=org.postgresql.Driver
 
@@ -15,6 +15,7 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 
-#router temporary address 192.168.0.94
+#router temporary address 192.168.0.94 ||| 0.0.0.0
 server.address=0.0.0.0
+#8080 || 80
 server.port=80
